--- a/src/views/notes/new.hbs
+++ b/src/views/notes/new.hbs
@@ -1,1 +1,22 @@
-<h1>aqui esta para crcear notas</h1>
+<h1 class="text-white display-5 text-center mt-3">Crea un nueva nota</h1>
+{{#each errors}}
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+ {{text}}
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+{{/each}}
+
+<form class="col-12 col-md-6 mx-auto" action="/notes/new-note" method="POST">
+  <div class="form-group">
+    {{!-- <label for="title">Titulo</label> --}}
+    <input type="text" name="title" class="form-control" id="title" placeholder="Titulo" autofocus >
+  </div>
+
+    {{!-- <label for="note">Nota</label> --}}
+    <textarea type="text" name="content" class="form-control" id="nota" placeholder="Nota"></textarea>
+  </div>
+
+  <button type="submit" class="btn btn-outline-dark btn-lg d-block mx-auto text-white mt-4">Guardar</button>
+</form>
