--- a/src/views/notes/all.hbs
+++ b/src/views/notes/all.hbs
@@ -1,15 +1,29 @@
+<h1>Notas Guardadas</h1>
+    <a href="/notes/new" class="btn btn-primary btn-sm my-3">+</a>
 <div class="row">
     {{#each notes}}
     <div class="col-md-3">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">
-                    {{title}}
+                <a href="/notes/edit/{{_id}}"><i class="fa fa-edit"></i></a>
+                    {{title}} 
                 </h4>
                 <p>{{content}}</p>
+                <form action="/notes/delete/{{_id}}?_method=DELETE" method="POST">
+                <input  type="hidden" name="_method" value="DELETE">
+                <button type="submit" class="btn btn-danger btn-block">Borrar</button>
+                </form>
             </div>
         </div>
     </div>
-    {{/each }}
+    {{else}}
+    <div class="card mx-auto">
+        <div class="card-body">
+            <p class="card-title">No hay notas</p>
+            <a class="btn btn-success btn-block" href="/notes/new">Crear</a>
+        </div>
+    </div>
+    {{/each}}
 
 </div>
