--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -42,6 +42,8 @@
     </nav>
     
     <div class="container">
+        {{>messages}}
+        {{>errors}}
     {{{body}}}
     </div>
     <footer class="fixed-bottom">
