--- a/src/views/user/signup.hbs
+++ b/src/views/user/signup.hbs
@@ -1,17 +1,24 @@
 <h1 class="text-white display-5 text-center mt-3">Formulario de Registro</h1>
-<form class="col-12 col-md-6 mx-auto">
+<form class="col-12 col-md-4 mx-auto" action="/signup" method="POST">
   <div class="form-group">
-    <label for="exampleInputEmail1">Email</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    {{!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> --}}
+    <input type="text" class="form-control" name="name"  placeholder="Nombre" value="{{name}} ">
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
+    <input type="email" class="form-control" name="email"  placeholder="E-mail" value="{{email}} ">
   </div>
-  <div class="form-group form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  <div class="form-group">
+    <input type="password" class="form-control" name="password"  placeholder="password" value="{{password}} ">
   </div>
-  <button type="submit" class="btn btn-outline-dark btn-lg d-block mx-auto text-white">Ingresar</button>
+  <div class="form-group">
+    <input type="password" class="form-control" name="confirm_password"  placeholder="password">
+  </div>
+  
+ 
+  {{!-- <div class="form-group form-check">
+    <input type="checkbox" class="form-check-input" >
+    <label class="form-check-label" for="exampleCheck1">Terminos y Condiciones</label>
+  </div> --}}
+
+  <button type="submit" class="btn btn-outline-dark btn-lg d-block mx-auto text-white">Registrar</button>
+
 </form>
