--- a/src/views/user/signin.hbs
+++ b/src/views/user/signin.hbs
@@ -1,19 +1,15 @@
 <h1 class="text-white display-5 text-center mt-3">
 Ingresa con tu cuenta
 </h1>
-<form class="col-12 col-md-6 mx-auto">
+<form class="col-12 col-md-6 mx-auto" action="/signin" method="POST">
   <div class="form-group">
-    <label for="exampleInputEmail1">Email</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    {{!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> --}}
+    <label >Email</label>
+    <input type="email" name="email" class="form-control">
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
-  </div>
-  <div class="form-group form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    <label>Password</label>
+    <input type="password" name="password" class="form-control">
   </div>
   <button type="submit" class="btn btn-outline-dark btn-lg d-block mx-auto text-white">Ingresar</button>
+  
 </form>
