--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,1 +1,35 @@
-<h1>about</h1>
+<div class="container mx-auto col-md-10 col-12 text-white">
+    <div class="row">
+        <div class="container">
+            <div class="card-header">
+                <h1 class="card-title">Acerca de</h1>
+                <div class="card-body">
+                    <h5 class="lead">
+                        Conceptos aplicados:
+                        </h5>
+                        <ul>
+                            <li>Node.js</li>
+                            <li>Express<ol>
+                                <li>express-handlerbar</li>
+                                <li>express-session</li>
+                            </ol></li>
+                            <li>method-override</li>
+                            <li>Mongoose ODM<ol>
+                                <li>MongoDB</li>
+                                <li>CRUD</li>
+                            </ol></li>
+                            <li></li>
+                            <li>Autenticación<ol>
+                                <li>bcrypt.js</li>
+                                <li>passport</li>
+                                <li>passport-local</li>
+                            </ol></li>
+                            <li>connect-flash</li>
+                        </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
