--- a/src/views/notes/edit.hbs
+++ b/src/views/notes/edit.hbs
@@ -5,7 +5,7 @@
             <input  type="hidden" name="_method" value="PUT">
             <input class="form-control mb-4" type="text" name="title" value="{{note.title}}">
             <textarea class="form-control mb-4" name="content">{{note.content}}</textarea>
-            <button type="submit" class="btn btn-success btn-block">Guardar</button>
+            <button type="submit" class="btn btn-primary btn-block">Guardar</button>
         </form>
     </div>
 </div>
