--- a/src/views/notes/new.hbs
+++ b/src/views/notes/new.hbs
@@ -11,5 +11,5 @@
     <textarea type="text" name="content" class="form-control" id="nota" placeholder="Nota"></textarea>
   </div>
 
-  <button type="submit" class="btn btn-outline-dark btn-lg d-block mx-auto text-white mt-4">Guardar</button>
+  <button type="submit" class="btn btn-primary btn-lg d-block mx-auto text-white mt-4">Guardar</button>
 </form>
