--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,1 +1,10 @@
-<h1>Hola mundo este es el index</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 text-white">
+            <h1>App de Notas:</h1>
+            <p class="mt-5">App para crear,leer,actualizar y borrar notas de una base de datos
+            </p>
+        </div>
+        <img class="d-block col-md-4" src="/css/mogodb.png" alt="MongoDB">
+    </div>
+</div>
