--- a/src/views/notes/all.hbs
+++ b/src/views/notes/all.hbs
@@ -1,5 +1,8 @@
 <h1>Notas Guardadas</h1>
-    <a href="/notes/new" class="btn btn-primary btn-sm my-3">+</a>
+    <a href="/notes/new" class="btn btn-success btn-sm my-3">+</a>
+    {{#if user}}
+    <h4>Notas de{{user.name}}</h4>
+    {{/if}}
 <div class="row">
     {{#each notes}}
     <div class="col-md-3">
